--- a/html/dz1/index.html
+++ b/html/dz1/index.html
@@ -7,12 +7,12 @@
 </head>
 <body>
  <div id="wrapper">
-   <div class="text">
+   <div class="block1">
      <h1>Ищенко Елена Анатольевна</h1>
-     <div class="img"><img src="img/Елена.jpg" alt="фото Ищенко Елены Анатольевны" title="Елена"></div>
+     <div class="img"><img src="images/Елена.jpg" alt="фото Ищенко Елены Анатольевны" title="Елена"></div>
      <p>Студентка GoIT</p>
    </div>
-   <div class="text">
+   <div class="block2">
     <p>Хочу учить фронтенд, потому что:</p>
        <ul>
        <li>Интересно делать и видеть результат</li>
@@ -20,15 +20,18 @@
        <li>Хочу делать свои проекты и развиваться вместе с IT</li>
        </ul>
    </div>
-   <div class="text">
-     <p>Мой контактный телефон</p>
-     <p>+380630176601</p>
-     <p>Мой профиль в fb</p>
-     <a href="https://www.facebook.com/helen.ishchenko" target="_blank">facebook.com<a/>
+   <div class="block3">	   
+    <p>Мой контактный телефон
+      <span>+380630176601</span>
+	</p>
+	<p>Мой профиль в fb
+       <span><a href="https://www.facebook.com/helen.ishchenko" target="_blank">facebook.com<a/></span>
+	</p>
    </div>
    <div class="feedback">
-     <p>Мой фидбек:</p>
-     <p>Делаю добро и бросаю его в воду</p>
+     <p>Мой фидбек: 
+	 <span>Делаю добро и бросаю его в воду</span>
+	 </p>
    </div>
  </div>
 </body>
