Fixed a bug ( closing bracket , line 28 )

--- a/html/dz1/index.html
+++ b/html/dz1/index.html
@@ -25,7 +25,7 @@
       <span>+380630176601</span>
 	</p>
 	<p>Мой профиль в fb
-       <span><a href="https://www.facebook.com/helen.ishchenko" target="_blank">facebook.com<a/></span>
+       <span><a href="https://www.facebook.com/helen.ishchenko" target="_blank">facebook.com</a></span>
 	</p>
    </div>
    <div class="feedback">
