--- a/html/dz3/index.html
+++ b/html/dz3/index.html
@@ -12,7 +12,7 @@
  <div class="wrapper">
   <div class="header">
    <div class="logo">
-   <a href="#"><img src="images/logo.png" alt="Fitness logo" title="Fitness logo"></a>
+   <a href="#"><img src="img/logo.png" alt="Fitness logo" title="Fitness logo"></a>
    </div>
    <div class="nav-top clearfix">
     <ul>
